I added the course section to the assignuser.html page for the suggestions yesterday.

--- a/GroupNullProject/Templates/361ProjectSite/assignuser.html
+++ b/GroupNullProject/Templates/361ProjectSite/assignuser.html
@@ -22,6 +22,10 @@
     <input type="text" placeholder="Enter Course Num..." id="cnum" required>
     <br>
 
+      <label for="csec"><b>Course Section</b></label>
+    <input type="text" placeholder="Enter Course Sec..." id="csec" required>
+    <br>
+
     <label for="usern"><b>User to Assign</b></label>
     <input type="text" placeholder="User to Assign..." id="usern" required>
     <br>
