--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Admin Vision</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <span style="font-weight:bold">This is the page that an administrative account will see after a successful login.</span>
