--- a/GroupNullProject/templates/index.html
+++ b/GroupNullProject/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
      <title>Team Null's Login Page</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   
