--- a/GroupNullProject/templates/newacc.html
+++ b/GroupNullProject/templates/newacc.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>New Account</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <span style="font-weight:bold">This is just a test. If you want to return to the login page, <a href= "index.html">click this link.</a></span>
