added link "/supervisor", "/professor", "/ta"

--- a/GroupNullProject/templates/index.html
+++ b/GroupNullProject/templates/index.html
@@ -16,7 +16,7 @@
 <h2>Login Here:</h2>
 
 <div class="container">
-    <form action="/" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         <label for="uname"><b>Username</b></label>
         <input name ="username" type="text" placeholder="Your username..." id="uname" required>
