--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Admin Vision</title>
-    <link href="../static/style.css" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <span style="font-weight:bold">This is the page that an administrative account will see after a successful login.</span>
@@ -14,10 +15,8 @@
     course.</p>
 <br>
 <br>
-<form>
-
-    <input type="button" value="Back to Login" onclick="history.back()">
-
+<form action="/">
+    <button type="submit">Log out</button>
 </form>
 
 <br>
