--- a/GroupNullProject/templates/newacc.html
+++ b/GroupNullProject/templates/newacc.html
@@ -19,7 +19,7 @@
 
     <hr>
 
-    <form action="/createuser/" method="post">
+    <form action="/createuser" method="post">
         {% csrf_token %}
         <label for="fullname"><b>Full Name</b></label>
         <input name="fullName" type="text" placeholder="Staff Fullname" id="fullname" required>
@@ -50,6 +50,10 @@
         </select>
         <br>
         <input type="submit" value="Create Account">
+    </form>
+
+    <form action="/supervisor">
+        <button type="submit">Home</button>
     </form>
 
     {{ msg }}
