adminpage.html = changed something to make the create course work createcourse.html = changed few things to make the create course button work urls.py = added the createcourse path view.py = added the createcourse views.py testCourse.py = added the course test and everything passed

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -27,7 +27,7 @@
 
 <br>
 
-<form action="createcourse.html">
+<form action="/createcourse">
     <button type="submit">Create Course</button>
 </form>
 
