fixed createUser empty filed issue

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -21,13 +21,13 @@
 
 <br>
 
-<form action="/createuser">
+<form action="/createuser/">
     <button type="submit">Create Account</button>
 </form>
 
 <br>
 
-<form action="/createcourse">
+<form action="/createcourse/">
     <button type="submit">Create Course</button>
 </form>
 
