--- a/GroupNullProject/templates/newacc.html
+++ b/GroupNullProject/templates/newacc.html
@@ -8,7 +8,7 @@
     <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<span style="font-weight:bold">This is just a test. If you want to return to the login page, <a href="index.html">click this link.</a></span>
+<span style="font-weight:bold">This is just a test. If you want to return to the login page, <a href="/">click this link.</a></span>
 <h1 id="thetitle2">Create Account</h1>
 <p id="group1">
 
