removed debug views from login page

--- a/GroupNullProject/templates/index.html
+++ b/GroupNullProject/templates/index.html
@@ -36,9 +36,9 @@
     type:</p>
 
 
-<a href="tapage.html">TA View</a>
+<!--<a href="tapage.html">TA View</a>
 <a href="profpage.html">Prof View</a>
-<a href="adminpage.html">Admin View</a>
+<a href="adminpage.html">Admin View</a>-->
 
 
 </body>
