cleaned up login page

--- a/GroupNullProject/templates/index.html
+++ b/GroupNullProject/templates/index.html
@@ -32,8 +32,8 @@
 
 </div>
 
-<p>For testing and review, the three links below show each view of what will be the main page depending on the account's
-    type:</p>
+<!--<p>For testing and review, the three links below show each view of what will be the main page depending on the account's
+    type:</p>-->
 
 
 <!--<a href="tapage.html">TA View</a>
