Lab can be created now!

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -31,6 +31,9 @@
     <button type="submit">Create Course</button>
 </form>
 
+<form action="/createlab/">
+    <button type="submit">Create Lab</button>
+</form>
 
 <br>
 <form action="assignuser.html">
