--- a/GroupNullProject/templates/newacc.html
+++ b/GroupNullProject/templates/newacc.html
@@ -1,63 +1,136 @@
-{% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>New Account</title>
-    <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<span style="font-weight:bold">This is just a test. If you want to return to the login page, <a href="/">click this link.</a></span>
-<h1 id="thetitle2">Create Account</h1>
-<p id="group1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="container">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <p>Here you can create an account. Fill in the person's name and create a password for the account. Also indicate
-        what type of account this is.</p>
+    <title>Create Lab</title>
+  </head>
+  <body>
 
+    <!-- ----------------- Side Bar --------------------------- -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 280px; height: 98vh; position: absolute;">
+      <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
     <hr>
+    <ul class="nav nav-pills flex-column mb-auto h5">
+      <li class="nav-item">
+        <a href="/supervisor/" class="nav-link link-dark" aria-current="page">
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="/createuser/" class="nav-link active">
+          Create Account
+        </a>
+      </li>
+      <li>
+        <a href="/createcourse/" class="nav-link link-dark">
+          Create Course
+        </a>
+      </li>
+      <li>
+        <a href="/createlab/" class="nav-link ink-dark">
+          Create Lab
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-dark">
+          Edit Account
+        </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="">
+        <a href="/" class="nav-link link-dark text-danger">
+        <strong>Log Out</strong>
+      </a>
+    </div>
+  </div>
 
-    <form action="/createuser/" method="post">
-        {% csrf_token %}
-        <label for="fullname"><b>Full Name</b></label>
-        <input name="fullName" type="text" placeholder="Staff Fullname" id="fullname" required>
-        <br>
-        <label for="email"><b>Email</b></label>
-        <input name="email" type="email" placeholder="Staff Email" id="email" required>
-        <br>
-        <label for="uname"><b>Username</b></label>
-        <input name="username" type="text" placeholder="Username" id="uname" required>
-        <br>
-        <label for="psw"><b>Password</b></label>
-        <input name="password" type="password" placeholder="Password" id="psw" required>
-        <br>
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" id="psw-repeat" required>
-        <br>
-        <label for="phNumber"><b>Phone Number</b></label>
-        <input name="phNumber" type="number" placeholder="Phone Number" id="phNumber" required>
-        <br>
-        <label for="mailAdrs"><b>Mailing Address</b></label>
-        <input name="mailAdrs" type="text" placeholder="Mailing Address" id="mailAdrs" required>
-        <br>
-        <label for="acc-type"><b>What kind of account is this?</b></label>
-        <select name="accType" id="acc-type" size="3" required>
-            <option value="ta">TA</option>
-            <option value="prof">Professor</option>
-            <option value="admin">Administrator</option>
-        </select>
-        <br>
-        <input type="submit" value="Create Account">
-    </form>
+  <!-- ----------------- End Side Bar --------------------------- -->
 
-    <form action="/supervisor/">
-        <button type="submit">Home</button>
-    </form>
 
-    {{ msg }}
-
+ <div class="row justify-content-center">
+  <div style="margin-top: 10%; margin-left: 10%; text-align: center;" class="col-lg-4">
+      <h1 class="display-4"><strong>Create Account</strong></h1>
+  </div>
 </div>
-</body>
+
+  <div style="margin-top: 5%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
+  <form action="/createuser/" method="post">
+    {% csrf_token %}
+    <div class="form-group row">
+        <label for="fullname" class="col-sm-5 col-form-label">Staff Fullname</label>
+        <div class="col-sm-7">
+          <input name="fullName" type="text" class="form-control" id="fullname" placeholder="i.e. John Smith">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="email" class="col-sm-5 col-form-label">Email</label>
+        <div class="col-sm-7">
+          <input name="email" type="email" class="form-control" id="email" placeholder="i.e. john@dom.com">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="uname" class="col-sm-5 col-form-label">Username</label>
+        <div class="col-sm-7">
+          <input name="username" type="text" class="form-control" id="uname" placeholder="Must be Unique">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="psw" class="col-sm-5 col-form-label">Password</label>
+        <div class="col-sm-7">
+          <input name="password" type="password" class="form-control" id="psw" placeholder="">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="phNumber" class="col-sm-5 col-form-label">Phone Number</label>
+        <div class="col-sm-7">
+          <input name="phNumber" type="text" class="form-control" id="phNumber" placeholder="4141234567">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="mailAdrs" class="col-sm-5 col-form-label">Mailing Address</label>
+        <div class="col-sm-7">
+          <input name="mailAdrs" type="text" class="form-control" id="mailAdrs" placeholder="">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="accType" class="col-sm-5 col-form-label">Account Type</label>
+        <div class="col-sm-7">
+            <select name="accType" class="custom-select my-1 mr-sm-2" id="accType">
+                <option disabled>Choose...</option>
+                <option value="admin">Administrator</option>
+                <option value="prof">Professor</option>
+                <option value="ta">TA</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+          <button type="submit" class="btn btn-primary">Create Account</button>
+        </div>
+    </div>
+
+      <div class="row justify-content-center">
+          <div style="margin-top: 10%; text-align: center;" class="col-lg-12">
+              <label style="color: crimson; font-size: x-large">{{ msg }}</label>
+          </div>
+      </div>
+
+  </form>
+</div>
+
+  </body>
 </html>
