Added functionality to editContact and added markdown to html

--- a/GroupNullProject/templates/createLab.html
+++ b/GroupNullProject/templates/createLab.html
@@ -28,12 +28,12 @@
         </a>
       </li>
       <li>
-        <a href="/createcourse/" class="nav-link link-dark">
+        <a href="createcourse.html" class="nav-link link-dark">
           Create Course
         </a>
       </li>
       <li>
-        <a href="/createlab/" class="nav-link active">
+        <a href="createlab.html" class="nav-link active">
           Create Lab
         </a>
       </li>
