--- a/GroupNullProject/templates/createLab.html
+++ b/GroupNullProject/templates/createLab.html
@@ -18,12 +18,12 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto h5">
       <li class="nav-item">
-        <a href="/supervisor/" class="nav-link link-dark" aria-current="page">
+        <a href="adminpage.html" class="nav-link link-dark" aria-current="page">
           Home
         </a>
       </li>
       <li>
-        <a href="/createuser/" class="nav-link ink-dark">
+        <a href="newacc.html" class="nav-link ink-dark">
           Create Account
         </a>
       </li>
