--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -17,22 +17,22 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto h5">
       <li class="nav-item">
-        <a href="/supervisor/" class="nav-link active" aria-current="page">
+        <a href="adminpage.html" class="nav-link active" aria-current="page">
           Home
         </a>
       </li>
       <li>
-        <a href="/createuser/" class="nav-link link-dark">
+        <a href="newacc.html" class="nav-link link-dark">
           Create Account
         </a>
       </li>
       <li>
-        <a href="/createcourse/" class="nav-link link-dark">
+        <a href="createcourse.html" class="nav-link link-dark">
           Create Course
         </a>
       </li>
       <li>
-        <a href="/createlab/" class="nav-link link-dark">
+        <a href="createLab.html" class="nav-link link-dark">
           Create Lab
         </a>
       </li>
