Finished ContactInfo, Added scope for admin to lookup all the data in system, refined and added html pages

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -1,56 +1,63 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Admin View</title>
-  </head>
+</head>
 <body>
-  <!-- ----------------- Side Bar --------------------------- -->
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 280px; height: 98vh; position: absolute;">
-      <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
+<!-- ----------------- Side Bar --------------------------- -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
+    <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto h5">
-      <li class="nav-item">
-        <a href="/supervisor/" class="nav-link active" aria-current="page">
-          Home
-        </a>
-      </li>
-      <li>
-        <a href="/createuser/" class="nav-link link-dark">
-          Create Account
-        </a>
-      </li>
-      <li>
-        <a href="/createcourse/" class="nav-link link-dark">
-          Create Course
-        </a>
-      </li>
-      <li>
-        <a href="/createlab/" class="nav-link link-dark">
-          Create Lab
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          Edit Account
-        </a>
-      </li>
+        <li class="nav-item">
+            <a href="/supervisor/" class="nav-link active" aria-current="page">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="/createuser/" class="nav-link link-dark">
+                Create Account
+            </a>
+        </li>
+        <li>
+            <a href="/createcourse/" class="nav-link link-dark">
+                Create Course
+            </a>
+        </li>
+        <li>
+            <a href="/createlab/" class="nav-link link-dark">
+                Create Lab
+            </a>
+        </li>
+        <li>
+            <a href="#" class="nav-link link-dark">
+                Edit Account
+            </a>
+        </li>
+        <li>
+            <a href="/lookup/" class="nav-link link-dark">
+                Lookup Data
+            </a>
+        </li>
     </ul>
     <hr>
     <div class="">
         <a href="/" class="nav-link link-dark text-danger">
-        <strong>Log Out</strong>
-      </a>
+            <strong>Log Out</strong>
+        </a>
     </div>
-  </div>
+</div>
 
-  <!-- ----------------- End Side Bar --------------------------- -->
+<!-- ----------------- End Side Bar --------------------------- -->
 
-  </body>
+
+</body>
 </html>
