--- a/GroupNullProject/templates/createcourse.html
+++ b/GroupNullProject/templates/createcourse.html
@@ -1,54 +1,122 @@
-<!DOCTYPE html>
-<html lang = "en">
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>New Account</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="../static/style.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Create Course</title>
   </head>
   <body>
-    <span style="font-weight:bold">This is just a test. If you want to return to the login page, <a href= "index.html">click this link.</a></span>
-    <h1 id="thetitle2">Create Course</h1>
-    <p id="group1">
 
-  <div class="container">
-    <form method="post" action="/createcourse/">
-
-    <p>Please include the name of the course you want to create, as well as whether it is undergraduate or graduate. Remember, no duplicate course names!</p>
-
+    <!-- ----------------- Side Bar --------------------------- -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light h3" style="width: 14%; height: 100%; position: absolute;">
+    <span class="text-primary"><strong style="font-size: xx-large;">Admin View</strong></span>
     <hr>
+    <ul class="nav nav-pills flex-column mb-auto h5">
+        <li class="nav-item">
+            <a href="/supervisor/" class="nav-link link-dark" aria-current="page">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="/createuser/" class="nav-link link-dark">
+                Create Account
+            </a>
+        </li>
+        <li>
+            <a href="/createcourse/" class="nav-link active">
+                Create Course
+            </a>
+        </li>
+        <li>
+            <a href="/createlab/" class="nav-link link-dark">
+                Create Lab
+            </a>
+        </li>
+        <li>
+            <a href="#" class="nav-link link-dark">
+                Edit Account
+            </a>
+        </li>
+        <li>
+            <a href="/lookup/" class="nav-link link-dark">
+                Lookup Data
+            </a>
+        </li>
+    </ul>
+    <hr>
+    <div class="">
+        <a href="/" class="nav-link link-dark text-danger">
+            <strong>Log Out</strong>
+        </a>
+    </div>
+</div>
 
-        {% csrf_token %}
-        <br>
-        <table>
-        <tr><label for="name"><b>Course Name</b></label>
-        <input name="name" type="text" placeholder="Enter Course Name..." id="name" ></tr>
-        <br>
-
-        <tr><label for ="section"><b>Course Section</b></label>
-            <input name="section" type="text" placeholder="Enter Course Section..." id="section"></tr>
-        <br>
-
-        <tr><label for="credits"><b>Credits</b></label>
-            <input name="credits" type="text" placeholder="Enter Credits..." id="credits" ></tr>
-        <br>
-
-        <tr><label for="prereqs"><b>Prereqs</b></label>
-            <input name="prereqs" type="text" placeholder="Enter Prereqs..." id="prereqs"></tr>
-        <br>
+  <!-- ----------------- End Side Bar --------------------------- -->
 
 
-            <tr><label for="desc"><b>Course Description</b></label>
-        <textarea id="desc" rows="4" cols="30" name="desc">
-        Enter your description here...
-        </textarea></tr>
-        <br>
-
-        <input type="submit" value="Create Course!">
-            </table>
-    </form>
-    {{ msg }}
+ <div class="row justify-content-center">
+  <div style="margin-top: 5%; margin-left: 10%; text-align: center;" class="col-lg-4">
+      <h1 class="display-4"><strong>Create Course</strong></h1>
   </div>
+</div>
+
+  <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
+  <form action="/createcourse/" method="post">
+    {% csrf_token %}
+    <div class="form-group row">
+        <label for="name" class="col-sm-5 col-form-label">Course Name</label>
+        <div class="col-sm-7">
+          <input name="name" type="text" class="form-control" id="name" placeholder="i.e. CS361">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="section" class="col-sm-5 col-form-label">Course Section</label>
+        <div class="col-sm-7">
+          <input name="section" type="text" class="form-control" id="section" placeholder="i.e. 801">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="credits" class="col-sm-5 col-form-label">Credits</label>
+        <div class="col-sm-7">
+          <input name="credits" type="text" class="form-control" id="credits" placeholder="">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="prereqs" class="col-sm-5 col-form-label">Prereqs</label>
+        <div class="col-sm-7">
+          <input name="prereqs" type="text" class="form-control" id="prereqs" placeholder="None, if no prereqs">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="description" class="col-sm-5 col-form-label">Description</label>
+        <div class="col-sm-7">
+          <input name="description" type="text" class="form-control" id="description" placeholder="">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+          <button type="submit" class="btn btn-primary">Create Course</button>
+        </div>
+    </div>
+
+      <div class="row justify-content-center">
+          <div style="margin-top: 5%; text-align: center;" class="col-lg-12">
+              <label style="color: crimson; font-size: x-large">{{ msg }}</label>
+          </div>
+      </div>
+
+  </form>
+</div>
+
   </body>
 </html>
