added some stuff

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -38,6 +38,11 @@
             </a>
         </li>
         <li>
+            <a href="/assignprof/" class="nav-link link-dark">
+                Assign Professor
+            </a>
+        </li>
+        <li>
             <a href="#" class="nav-link link-dark">
                 Edit Account
             </a>
