--- a/GroupNullProject/templates/assignprof.html
+++ b/GroupNullProject/templates/assignprof.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Create Lab</title>
+    <title>Assign Professor</title>
   </head>
   <body>
 
@@ -33,8 +33,13 @@
             </a>
         </li>
         <li>
-            <a href="/createlab/" class="nav-link active">
+            <a href="/createlab/" class="nav-link link-dark">
                 Create Lab
+            </a>
+        </li>
+        <li>
+            <a href="#" class="nav-link active">
+                Assign Professor
             </a>
         </li>
         <li>
@@ -61,35 +66,40 @@
 
  <div class="row justify-content-center">
   <div style="margin-top: 5%; margin-left: 10%; text-align: center;" class="col-lg-4">
-      <h1 class="display-4"><strong>Create Lab</strong></h1>
+      <h1 class="display-4"><strong>Assign Professor</strong></h1>
   </div>
 </div>
 
   <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
-  <form action="/createlab/" method="post">
+  <form action="/assignprof/" method="post" style="max-width: available">
     {% csrf_token %}
     <div class="form-group row">
-        <label for="courseSel" class="col-sm-5 col-form-label">Select a Course</label>
-        <div class="col-sm-7">
-            <select name="labName" class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+        <label for="prof" class="col-lg-12 col-form-label">Select Professor (Prof. Name -Username)</label>
+        <div class="col-sm-12">
+            <select name="profSel" class="custom-select my-1 mr-sm-2" id="prof">
                 <option disabled>Choose...</option>
-                {% for course in courseQuery %}
-                <option>{{ course.name }}</option>
+                {% for user in profQuery %}
+                <option>{{ user.name }} -{{ user.username }}</option>
                 {% endfor %}
             </select>
         </div>
       </div>
 
     <div class="form-group row">
-      <label for="inputPassword3" class="col-sm-5 col-form-label">Lab Section</label>
-      <div class="col-sm-7">
-        <input name="labSec" type="text" class="form-control" id="inputPassword3" placeholder="i.e. 801">
+        <label for="course" class="col-lg-12 col-form-label">Select Course (Course-Section)</label>
+        <div class="col-sm-12">
+            <select name="courseSel" class="custom-select my-1 mr-sm-2" id="course">
+                <option disabled>Choose...</option>
+                {% for course in courseQuery %}
+                <option>{{ course.name }}-{{ course.section }}</option>
+                {% endfor %}
+            </select>
+        </div>
       </div>
-    </div>
 
     <div class="form-group row">
       <div class="col-sm-10">
-        <button type="submit" class="btn btn-primary">Create and Assign Lab</button>
+        <button type="submit" class="btn btn-primary">Assign</button>
       </div>
     </div>
 
