added archive account button on Admin page and connected it to the HTML page

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -52,6 +52,11 @@
                 Lookup Data
             </a>
         </li>
+                <li>
+            <a href="/archiveacc/" class="nav-link link-dark">
+                Archive Account
+            </a>
+        </li>
     </ul>
     <hr>
     <div class="">
