finished archive account views and fixed some views bugs

--- a/GroupNullProject/templates/archiveacc.html
+++ b/GroupNullProject/templates/archiveacc.html
@@ -75,7 +75,7 @@
 
 
   <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
-  <form action="/createuser/" method="post">
+  <form action="/archiveacc/" method="post">
     {% csrf_token %}
     <div class="form-group row">
         <label for="email" class="col-sm-5 col-form-label">Account's Email</label>
