added edit own contact info pages and wrote views. Updated contact info function

--- a/GroupNullProject/templates/profpage.html
+++ b/GroupNullProject/templates/profpage.html
@@ -28,7 +28,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="/editownacc/" class="nav-link link-dark">
                 Edit Account
             </a>
         </li>
