--- a/GroupNullProject/templates/tapage.html
+++ b/GroupNullProject/templates/tapage.html
@@ -27,6 +27,11 @@
                 Contact Staff
             </a>
         </li>
+        <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Account
+            </a>
+        </li>
     </ul>
     <hr>
     <div class="">
