--- a/GroupNullProject/templates/contactinfoProf.html
+++ b/GroupNullProject/templates/contactinfoProf.html
@@ -19,12 +19,20 @@
   </div>
 </div>
 
-  <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;" class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
-  <form action="/createuser/" method="post">
-    {% csrf_token %}
+ <div style="margin-top: 3%; max-width: 50%; margin-left: 30%;"
+      class="d-flex justify-content-center shadow p-3 mb-5 bg-white rounded">
+     <form action="/editownacc/" method="post">
+         {% csrf_token %}
 
-    <div class="form-group row">
-        <label for="phNumber" class="col-sm-5 col-form-label">Phone Number</label>
+         <div class="form-group row">
+             <label for="username" class="col-sm-5 col-form-label">Current Username</label>
+             <div class="col-sm-7">
+                 <input name="username" type="text" class="form-control" id="username"
+                        placeholder="Current Username...">
+             </div>
+         </div>
+         <div class="form-group row">
+             <label for="phNumber" class="col-sm-5 col-form-label">Phone Number</label>
         <div class="col-sm-7">
           <input name="phNumber" type="text" class="form-control" id="phNumber" placeholder="Change Phone...">
         </div>
