added ta to course url to main page

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -42,6 +42,11 @@
                 Assign Professor
             </a>
         </li>
+                <li>
+            <a href="/tatocourse/" class="nav-link link-dark">
+                Assign TA To Course
+            </a>
+        </li>
         <li>
             <a href="#" class="nav-link link-dark">
                 Edit Account
