added admin edit contact page

--- a/GroupNullProject/templates/adminpage.html
+++ b/GroupNullProject/templates/adminpage.html
@@ -57,9 +57,14 @@
                 Lookup Data
             </a>
         </li>
-                <li>
+        <li>
             <a href="/archiveacc/" class="nav-link link-dark">
                 Archive Account
+            </a>
+        </li>
+                <li>
+            <a href="/editownacc/" class="nav-link link-dark">
+                Edit Own Contact
             </a>
         </li>
     </ul>
